Tidy project, create directories only in need

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 # Binaries for programs and plugins
 *.exe
 *.exe~
-*.dll
-*.so
-*.dylib
 *.log
 
 # Test binary, built with `go test -c`
@@ -14,7 +11,8 @@
 
 # Dependency directories (remove the comment below to include it)
 vendor/
-export/
 # ide
 .idea/
 .vscode/
+
+dist
