--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       POSTGRES_PASSWORD: password
     volumes:
       - db-data:/var/lib/postgresql/data
+      - $PWD/db/migrations:/docker-entrypoint-initdb.d
     restart: on-failure
 
   orchid:
