--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     restart: on-failure
 
   orchid:
-    build: .
+    image: repo.treescale.com/overseastu/orchid:latest
     command:
       - "frontend"
       - "--log-level"
