--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,9 @@ services:
   redis:
     image: redis:6-alpine
     container_name: redis
+    command: redis-server --appendonly yes
+    volumes:
+      - $PWD/db/redis:/data
     restart: on-failure
 
   postgres:
