--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,7 +66,9 @@ services:
       - "postgres"
     ports:
       - "8080:8080"
+      - "8081:8081"
     container_name: orchid
+    volumes: $PWD/cert:/cert-cache
     restart: on-failure
     depends_on:
       - redis
